--- a/app/views/info/styleguide.html.erb
+++ b/app/views/info/styleguide.html.erb
@@ -804,10 +804,25 @@
       </div>
     </p>
 
+
+    <p class="ui-widget">
+      <div class="ui-state-warning ui-corner-all">
+        <p><strong>Ruh-roh:</strong> Sample ui-state-warning style.</p>
+      </div>
+    </p>
+
+
     <p class="ui-widget">
       <div class="ui-state-error ui-corner-all">
         <p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
         <strong>Alert:</strong> Sample ui-state-error style.</p>
+      </div>
+    </p>
+
+
+    <p class="ui-widget">
+      <div class="ui-state-success ui-corner-all">
+        <p><strong>Ohai:</strong> Sample ui-state-success style.</p>
       </div>
     </p>
 
