--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -10,7 +10,7 @@ require([
   'jquery.google-analytics' /* trackPage, trackPageview */,
   'jquery.instructure_forms' /* formSubmit, getFormData, formErrors, errorBox */,
   'jquery.loadingImg' /* loadingImage */,
-  'jquery.rails_flash_notifications' /* flashMessage */
+  'compiled/jquery.rails_flash_notifications'
 ], function(I18n, $) {
 
 $(document).ready(function() {
