--- a/app/views/shared/unauthorized.html.erb
+++ b/app/views/shared/unauthorized.html.erb
@@ -7,10 +7,11 @@
 
 <% end %>
 <% @show_left_side = false %>
+<% needs_login = (!@current_user && !@files_domain) %>
 <div id="unauthorized_holder">
 <% if (@unauthorized_user && @current_user && @current_user != @unauthorized_user) || @unauthorized_user || @unauthorized_message || @context || @needs_cookies %>
-  <div class="ui-state-error">
-    <h2>
+  <div id="unauthorized_message" class="<%= 'ui-state-error' if needs_login %>">
+    <h2 class="<%= 'ui-state-error' unless needs_login %>">
       <% if @needs_cookies -%>
         <%= t('headings.needs_cookies', %{Cookies Required}) %>
       <% elsif !@files_domain && (!@current_user || @unauthorized_user) -%>
@@ -49,7 +50,7 @@
     <% end %>
   </div>
 <% end %>
-<% if !@current_user && !@files_domain %>
+<% if needs_login %>
   <%= render :partial => "shared/login", :locals => {:hide_fft => true} %>
 <% end %>
 </div>
