--- a/app/stylesheets/g_util_misc.sass
+++ b/app/stylesheets/g_util_misc.sass
@@ -176,17 +176,17 @@ table.zebra-stripes
       background: #F5F8F9 url(/images/jqueryui/ui-bg_inset-hard_100_f5f8f9_1x100.png) repeat-x 50%
       color: #030F1B
 
-.close-link
+.close_link
   display: block
-  background: url(/images/jqueryui/icon_sprite.png) 0px -16px no-repeat
+  background: url(/images/close.png) 0 -0 no-repeat
   height: 16px
   width: 16px
   text-indent: -99999px
   overflow: hidden
   &:hover, &:focus
-    background-position: -16px -16px
+    background-position: 0 -16px
 
-// this allows you to have a block-level element that does not have a defined with be horizontalally centered.
+// this allows you to have a block-level element that does not have a defined with be horizontally centered.
 // usage:
 //     <div class="centered-block">
 //       <div class="centered-block-wrap">
