--- a/app/stylesheets/jqueryui/_jquery.ui.theme.scss
+++ b/app/stylesheets/jqueryui/_jquery.ui.theme.scss
@@ -73,6 +73,23 @@
 .ui-priority-secondary, .ui-widget-content .ui-priority-secondary,  .ui-widget-header .ui-priority-secondary { @include opacity(.7); font-weight: normal; }
 .ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled { @include opacity(.35); background-image: none; }
 
+// instructure additions
+.ui-state-success, .ui-state-warning {
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+  color: $white;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+}
+.ui-state-success {
+  @include vertical-gradient($btnSuccessBackground, $btnSuccessBackgroundHighlight);
+}
+.ui-state-warning {
+  @include vertical-gradient($btnWarningBackground, $btnWarningBackgroundHighlight);
+}
+
+
 /* Icons
 ----------------------------------*/
 
