put drop arrow back on speed grader menu, fixes: #9533
test plan:
open speegrader,
make sure there is a drop down arrow on the menu in the
header

Change-Id: Id9ff18345b245c67cc0976c4da859c1ff4d77a7a
Reviewed-on: https://gerrit.instructure.com/12339
Reviewed-by: Jake Sorce <jake@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/speed_grader.sass
+++ b/app/stylesheets/speed_grader.sass
@@ -381,7 +381,8 @@ body .ui-selectmenu-dropdown
     :width 17px
     :height 22px
     :border 0
-    :background transparent url("/images/inst_combo/trigger.gif") no-repeat 0 0
+    background-image: url("/images/inst_combo/trigger.gif") !important
+    background-position: 0 0
     :cursor pointer
     :border-bottom 1px solid #B5B8C8
     :position absolute
