add a way to do tooltips with just markup, closes #9492
test-plan:
open /styleguide
hover over all the links/buttons with tooltips on the bottom of the page
and make sure they look good.

Change-Id: Ib0c00293a12dde2c58577d894eb380bf9ee1aaf6
Reviewed-on: https://gerrit.instructure.com/12455
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Mark Ericksen <marke@instructure.com>

--- a/app/stylesheets/jqueryui/_jquery.ui.all.scss
+++ b/app/stylesheets/jqueryui/_jquery.ui.all.scss
@@ -10,6 +10,7 @@
 @import "jquery.ui.tabs";
 @import "jquery.ui.datepicker";
 @import "jquery.ui.progressbar";
+@import "jquery.ui.tooltip";
 
 @import "jquery.ui.theme";
 
