--- a/app/views/info/styleguide.html.erb
+++ b/app/views/info/styleguide.html.erb
@@ -232,7 +232,7 @@
       &lt;/div&gt;
       </pre>
   </div>
-  
+
 
   <h2 class="v-gutter">Icons</h2>
   <span class="demo-icons"><i class="icon-stats"></i> icon-stats</span>
@@ -1357,15 +1357,23 @@
       <input type="button" value="Button" /> <br />
     </p>
 
-
   </section><!-- end jqueryUI -->
 
+  <section>
+    <h2>Tooltips</h2>
+    these links have tooltips:
+    <a data-tooltip title="this is a really long tooltip, it was not passed any options, it just had the [data-tooltip] attribute, which means it should appear on the top center of the trigger element.  and it should wrap since the text is so long">default</a>
+    <a data-tooltip="top" title="same as default">top</a>
+    <a data-tooltip="right" title="should be right center">right</a>
+    <a data-tooltip="bottom" title="should be bottom center">bottom</a>
+    <a data-tooltip="left" title="should be left center">left</a>
+    <a data-tooltip='{"track":true}' title="this toolstip will stay connected to mouse as it moves around">
+      tooltip that tracks mouse
+    </a>
+    <button data-tooltip title="any type of element can have a tooltip" class="btn">
+      button with tooltip
+    </button>
+  </section>
 
 
 </div>
-
-<% js_block do %>
-  <script>
-
-  </script>
-<% end %>
