fix calendar2/assignment rendering regression, fixes #9516
fix regression in #7927 where assignments due close to midnight didn't
display in week view (due to some dance of display/height/position, and
full calendar clearing out content of clipped elements)

test plan:
1. create an assignment due at midnight
2. confirm that it displays on weekview (both on the night and morning
   it's due)
3. create another assignment due at the same time
4. confirm that both are visible and readable (i.e. regression test #7927)

Change-Id: Ic2e6d3b523e5090a2bb5136cc74ba496a0b4ff34
Reviewed-on: https://gerrit.instructure.com/12380
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Joe Tanner <joe@instructure.com>

--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -92,6 +92,8 @@
       color: #9da5ab
 
 .fc-event.assignment
+  .fc-event-inner div
+    display: inline
   background-color: white
 
 .counter-badge
