move jQuery autocomplete to behavior.
autocomplete can now be set up by adding "autocomplete" to
data-behaviors and passing a JSON object of configuration to
data-autocomplete-options.

test plan:
  * visit /accounts/:id;
  * type at least four letters into the "Find a Course" text
    box and verify that it works as expected;
  * run js specs with rake js:test.

Change-Id: I66a1492d639fe2aa0fa6aa767baf7a4a2607fec8
Reviewed-on: https://gerrit.instructure.com/12388
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/views/accounts/_courses_right_side.html.erb
+++ b/app/views/accounts/_courses_right_side.html.erb
@@ -28,7 +28,12 @@
       <div class="rs-margin-lr rs-margin-bottom">
         <% form_for :course, :url => account_courses_path(@account), :html => {:id => "new_course", :method => :get} do |f| -%>
           <fieldset class="textfield-inline-with-button">
-            <input id="course_name" name="course[name]" value="<%= @query %>" />
+            <input id="course_name"
+                   name="course[name]"
+                   value="<%= @query %>"
+                   data-behaviors="autocomplete"
+                   data-autocomplete-options="<%= { :minLength => 4, :delay => 150, :source => account_courses_path(@account, :format => :json) }.to_json  %>"
+                   />
             <button class='button small-button'><%= t(:go_button, "Go") %></button>
           </fieldset>
         <%- end -%>
