sanitize user content in calendar api, fixes #9479
sanitize by way of api_user_content/convertApiUserContent

also fix these methods so that link content gets passed through. it's
normally replaced via enhanceUserContent, but this makes in consistent
with non-API user content (and makes it available to API users who want
it)

test plan:
1. create a course calendar event
2. add a media comment to the description
3. it should render/play correctly when you view the event detail
   in the calendar
4. the api JSON should have a <video /> tag rather than a
   <a class="instructure_inline_media_comment" /> tag

Change-Id: Icfd9e9a41145fb7c6ed0faf36b9706899da84bcc
Reviewed-on: https://gerrit.instructure.com/12389
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/views/jst/calendar/eventDetails.handlebars
+++ b/app/views/jst/calendar/eventDetails.handlebars
@@ -31,7 +31,7 @@
       {{#if description}}
         <tr>
           <th scope="row">{{#t "details"}}Details{{/t}}</th>
-          <td>{{{description}}}</td>
+          <td class="user_content">{{convertApiUserContent description}}</td>
         </tr>
       {{/if}}
       {{#if reservations}}
