sensible year range for birth date, fixes #9553
* fix year range in birth date input
* localize display of birth date
* fix javascript to display changes to birth date
* fix es.yml mis-translation (those symbols shouldn't be translated, but
  we do want per-locale ordering)

test plan:
1. edit your profile
2. confirm you can set your birth date to something sensible (last year,
   all the way back to 125 years ago)
3. confirm that when you set the birth date, the ui reflects it after you
   save
4. confirm that you can clear out the birth date

Change-Id: Ic9894070076a0d5b23f2005b36effee32c2fefc2
Reviewed-on: https://gerrit.instructure.com/12399
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Wily <zach@instructure.com>

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -46,10 +46,10 @@
     </td>
   </tr>
   <tr>
-    <td><%= f.blabel :birthdate, :en => "Birthday" %></td>
+    <td><%= f.blabel :birthdate, :en => "Birth Date" %></td>
     <td>
-      <span class="display_data"><%= @user.birthdate ? @user.birthdate.strftime('%m/%d/%Y') : "" %></span>
-      <%= f.date_select :birthdate, {:order => [:day, :month, :year]}, :class => 'edit_data' %>
+      <span class="birthdate display_data"><%= @user.birthdate ? date_string(@user.birthdate) : "-" %></span>
+      <%= f.date_select :birthdate, {:start_year => Time.now.year - 1, :end_year => Time.now.year - 125, :include_blank => true}, :class => 'edit_data' %>
     </td>
   </tr>
   <% active_email_channels = @email_channels.select { |cc| cc.active? } %>
