tighten down admin merge UI fixes #5569
 * don't list accounts to search that the admin doesn't actually have
   permission to search
 * don't show user information for an arbitrary id if the admin
   doesn't have permissions to that user

test plan:
 * create an admin in a non-default account, and merge him with a
   normal user in another account
 * log in as that admin, and go to /users/<admin id>/admin_merge
 * it should only list the account the user is actually an admin in
   to merge, NOT the account he's only a normal user in
 * enter the id of another user in the account the admin is a normal
   user in
 * it should just re-show the same page, NOT show the details of
   the other user

Change-Id: I97577846479ae461c45045d49e122f79394ccecf
Reviewed-on: https://gerrit.instructure.com/12419
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Brian Palmer <brianp@instructure.com>

--- a/app/views/users/admin_merge.html.erb
+++ b/app/views/users/admin_merge.html.erb
@@ -72,7 +72,7 @@
         <tr>
           <td style="vertical-align: top; padding: 10px 30px 10px;">
             <h3><%= t('titles.find_user', 'Find a User') %></h3>
-            <% accounts = @current_user.associated_accounts.sort_by(&:name).uniq %>
+            <% accounts = @current_user.associated_accounts.sort_by(&:name).uniq.select { |a| a.grants_rights?(@current_user, session, :manage_user_logins, :read_roster).values.all? } %>
             <% if accounts.empty? %>
               <%= t('no_permission', "You don't have permission to search any accounts") %>
             <% else %>
