--- a/app/messages/updated_wiki_page.facebook.erb
+++ b/app/messages/updated_wiki_page.facebook.erb
@@ -1,8 +1,7 @@
-<% namespace = asset.find_namespace_for_user(user) %>
 <% define_content :link do %>
-  http://<%= HostUrl.context_host(namespace.context) %>/<%= namespace.context.class.to_s.downcase.pluralize %>/<%= namespace.context_id %>/wiki/<%= namespace.namespace + ":" if !namespace.default? %><%= asset.url %>
-  <% end %>
+    http://<%= HostUrl.context_host(asset.context) %>/<%= asset.context.class.to_s.downcase.pluralize %>/<%= asset.context.id %>/wiki/<%= asset.url %>
+<% end %>
 
-<%= t :body, "A page has been updated on the wiki for %{title}.", :title => namespace.context.name %>
+<%= t :body, "A page has been updated on the wiki for %{title}.", :title => asset.context.name %>
 <br/>
 <b><a href="<%= content :link %>"><%= asset.title.titleize %></a></b>
