--- a/app/messages/updated_wiki_page.sms.erb
+++ b/app/messages/updated_wiki_page.sms.erb
@@ -1,5 +1,5 @@
-<%= t :updated_message, "%{title}, %{user} just updated:", :title => asset.title, :user => (asset.find_namespace_for_user(user).context.name rescue "") %>
+<%= t :updated_message, "%{title}, %{user} just updated:", :title => asset.title, :user => asset.context.name %>
 
 <%= strip_and_truncate(asset.body, :max_length => 50) %>
 
-<%= t :more_info, "More info at %{url}", :url => HostUrl.context_host(asset.find_namespace_for_user(user).context) %>
+<%= t :more_info, "More info at %{url}", :url => HostUrl.context_host(asset.context) %>
