--- a/app/messages/updated_wiki_page.summary.erb
+++ b/app/messages/updated_wiki_page.summary.erb
@@ -1,10 +1,9 @@
-<% namespace = asset.find_namespace_for_user(user) %>
 <% define_content :link do %>
-  http://<%= HostUrl.context_host(namespace.context) %>/<%= namespace.context.class.to_s.downcase.pluralize %>/<%= namespace.context_id %>/wiki/<%= namespace.namespace + ":" if !namespace.default? %><%= asset.url %>
+  http://<%= HostUrl.context_host(asset.context) %>/<%= asset.context.class.to_s.downcase.pluralize %>/<%= asset.context.id %>/wiki/<%= asset.url %>
 <% end %>
 
 <% define_content :subject do %>
-  <%= t :subject, "Updated Wiki Page: %{title}, %{user}", :title => asset.title.titleize, :user => (asset.find_namespace_for_user(user).context.name rescue "") %>
+  <%= t :subject, "Updated Wiki Page: %{title}, %{user}", :title => asset.title.titleize, :user => asset.context.name %>
 <% end %>
 
 <%= strip_and_truncate(asset.body, :max_length => 200) %> 
