--- a/app/messages/updated_wiki_page.twitter.erb
+++ b/app/messages/updated_wiki_page.twitter.erb
@@ -1,6 +1,5 @@
-<% namespace = asset.find_namespace_for_user(user) %>
 <% define_content :link do %>
-  http://<%= HostUrl.context_host(namespace.context) %>/<%= namespace.context.class.to_s.downcase.pluralize %>/<%= namespace.context_id %>/wiki/<%= namespace.namespace + ":" if !namespace.default? %><%= asset.url %>
+    http://<%= HostUrl.context_host(asset.context) %>/<%= asset.context.class.to_s.downcase.pluralize %>/<%= asset.context.id %>/wiki/<%= asset.url %>
 <% end %>
-<%=  t :tweet, "Canvas Alert - Page Updated: %{title}, %{user}.", :title => asset.title, :user => (asset.find_namespace_for_user(user).context.name rescue "") %>
+<%=  t :tweet, "Canvas Alert - Page Updated: %{title}, %{user}.", :title => asset.title, :user => asset.context.name %>
 <%= strip_and_truncate(asset.body, :max_length => 50) %>
