--- a/app/views/wiki_pages/_wiki_right_side.html.erb
+++ b/app/views/wiki_pages/_wiki_right_side.html.erb
@@ -63,7 +63,7 @@
       </div>
   </div>
 
-<% if can_do(@page, @current_user, :update_content) || (can_do(@page, @current_user, :delete) && @page.url != 'front-page') || can_do(@namespace, @current_user, :create_page)  %>
+<% if can_do(@page, @current_user, :update_content) || (can_do(@page, @current_user, :delete) && @page.url != 'front-page') || can_do(@wiki, @current_user, :create_page)  %>
   <div class="rs-margin-lr <%= "rs-margin-bottom" if course_home %>">
     <hr />
   <% if can_do(@page, @current_user, :update_content)%>
@@ -73,7 +73,7 @@
     <%= link_to image_tag('delete.png') + " " + t('links.delete_page', "Delete this Page"), context_url(@context, :context_wiki_page_url, @page.url), :method => :delete, :confirm => t('delete_page_confirmation', 'Are you sure you want to delete this page? This cannot be undone!'), :class => "button button-sidebar-wide" %>
   <% end %>
   <a href="<%= context_url(@context, :context_wiki_page_url, @page) %>" class="wiki_page_url" style="display: none;">&nbsp;</a>
-  <% if can_do(@context, @current_user, :manage_wiki) || can_do(@namespace, @current_user, :create_page) %>
+  <% if can_do(@context, @current_user, :manage_wiki) || can_do(@wiki, @current_user, :create_page) %>
     <div id="wiki_page_new">
       <a class="new button button-sidebar-wide" href="#"><%= image_tag "add.png" %> <%= t 'links.create_page', 'Create a New Page' %></a>
       <% form_for(:wiki_page, :url => context_url(@context, :context_wiki_pages_url), :html => {:method => :post, :style => "margin-left: 20px; display: none", :id => 'add_wiki_page_form'}) do |f| -%>
