--- a/app/stylesheets/registration.scss
+++ b/app/stylesheets/registration.scss
@@ -14,10 +14,12 @@ a {
 .registration-dialog {
   margin-top: 2em;
   font-size: 1.1em;
-}
-
-.registration-dialog .spinner {
-  width: 100px
+  .registration-dialog .spinner {
+    width: 100px;
+  }
+  .select-birthdate {
+    width: auto;
+  }
 }
 
 .help-block-small {
