--- a/app/views/jst/registration/studentDialog.handlebars
+++ b/app/views/jst/registration/studentDialog.handlebars
@@ -17,7 +17,7 @@
     <div class="control-group">
       <label class="control-label" for="student_birthdate">{{#t "labels.birthdate"}}Birth Date{{/t}}</label>
       <div class="controls">
-        <input type="text" id="student_birthdate" name="user[birthdate]" class="date-field">
+        {{dateSelect "user[birthdate]" id="student_birthdate" type="birthdate" class="select-birthdate"}}
       </div>
     </div>
     <div class="control-group">
