--- a/app/views/shared/_user_lists.html.erb
+++ b/app/views/shared/_user_lists.html.erb
@@ -39,7 +39,7 @@
       </div>
 
       <div class="person ui-helper-reset ui-state-default ui-corner-all" id="user_lists_processed_person_template" title="<%= t 'titles.new_user','New user' %>" style="display:none;">
-        <span class="ui-icon"></span>
+        <div class="name"></div>
         <div class="address"></div>
       </div>
     </div>
