add hide student names option to gradebook2.
test plan:
  * open gradebook2 in a course with 50+ students (more
    than will fit in one slickgrid view);
  * click gradebook2 menu, select "hide student names;"
  * verify that student names and email addresses are
    hidden;
  * open menu and select "show student names;"
  * verify that names and email addresses are again visible;

Change-Id: I68e0abc35ca6cec53020dce71d862c802617bb40
Reviewed-on: https://gerrit.instructure.com/12472
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/stylesheets/gradebook2.sass
+++ b/app/stylesheets/gradebook2.sass
@@ -42,6 +42,8 @@ $cell_height: 33px
     img
       max-width: 30px
       height: 30px
+  .student-placeholder
+    display: none
   .student-section
     font-size: 10px
     color: #aaa
@@ -50,6 +52,15 @@ $cell_height: 33px
     font-size: 10px
     text-align: center
     line-height: 35px
+
+  // show and hide student names using a parent css class.
+  .hide-students
+    .student-name, .avatar
+      display: none
+    .student-placeholder
+      display: block
+    .secondary_identifier_cell
+      text-indent: -9999em
 
 // override the default jquery ui top border
 .slick-header.ui-state-default
