--- a/app/views/jst/gradebook2/row_student_name.handlebars
+++ b/app/views/jst/gradebook2/row_student_name.handlebars
@@ -3,3 +3,7 @@
 {{#if sectionNames}}
   <div class='student-section'>{{{sectionNames}}}</div>
 {{/if}}
+
+<div class="student-placeholder">
+  {{#t "student_placeholder"}}Student{{/t}}
+</div>
