expand error box to contain text, fixes #9607
ensure error (or success) flash notice contents do not overflow

test plan:
1. trigger an action that causes an alert with a lot of text (or in the
   js console do something like $.flashError('long message here...') )
2. ensure that the text doesn't overflow the box

Change-Id: I6e241086b7ce860ff5ce5eb6f66a808327c73078
Reviewed-on: https://gerrit.instructure.com/12483
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -31,9 +31,8 @@
     box-shadow: 0 1px 1px rgba(0,0,0,0.25)
     border-bottom-color: rgba(0,0,0,0.5)
     margin: 0
-    padding: 0
-    height: 28px
-    line-height: 28px
+    padding: 4px 40px 4px 8px
+    min-height: 20px
     vertical-align: middle
     text-align: center
     font-weight: bold
@@ -65,8 +64,8 @@
         display: none
     &.xlarge
       font-size: 1.5em
-      height: 58px
-      line-height: 58px
+      padding: 8px 40px 8px 8px
+      min-height: 42px
       i
         width: 40px
         height: 40px
@@ -74,19 +73,6 @@
       &.ui-state-error, &.ui-state-warning
         i
           background-image: url(/images/warning_36.png)
-      &.confirm-email
-        text-align: left
-        font-size: 1em
-        line-height: 1.25
-        strong
-          font-weight: normal
-          font-size: 1.4em
-          display: block
-          margin-top: 8px
-          color: #000
-        i
-          float: left
-          margin: 8px 16px 0 24px
 
 #unauthorized_message
   border: 1px solid #000
