--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -49,7 +49,7 @@
     <td><%= f.blabel :birthdate, :en => "Birth Date" %></td>
     <td>
       <span class="birthdate display_data"><%= @user.birthdate ? date_string(@user.birthdate) : "-" %></span>
-      <%= f.date_select :birthdate, {:start_year => Time.now.year - 1, :end_year => Time.now.year - 125, :include_blank => true}, :class => 'edit_data' %>
+      <%= f.date_select :birthdate, {:start_year => Time.now.year - 1, :end_year => Time.now.year - 125, :include_blank => @user.birthdate.nil?}, :class => 'edit_data' %>
     </td>
   </tr>
   <% active_email_channels = @email_channels.select { |cc| cc.active? } %>
