new profile page closes #9369
users have a new profile page that displays a
custom bio, links, and contact methods as well as
how the viewing user knows them.

this profile can be a part of any page and is
displayed on the user in a course pages as well.

profiles are found at /about/:user_id

Change-Id: I3339144135d67415af9068d18776b691320c1938
Reviewed-on: https://gerrit.instructure.com/12298
Reviewed-by: Jon Jensen <jon@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/profile/show.sass
+++ b/app/stylesheets/profile/show.sass
@@ -1,7 +1,61 @@
 @import 'environment'
 
+.not-editing
+  .show-if-editing
+    display: none !important
+
+.editing
+  .hide-if-editing
+    display: none !important
+
 .profile-avatar-wrapper
-  margin-right: 30px
+  margin-right: 20px !important
+  img
+    padding: 1px
+    border: solid 1px #888
+    box-shadow: 0 2 4 rgba(0,0,0,0.5)
+
+.report_picture
+  margin: 0
+  text-align: center
+  font-size: 12px
+
+.more_user_information
+  fieldset
+    margin: 0
+    padding: 0
+    border: 0
+  legend
+    margin: 0
+    font-size: 14px
+    margin: 1em 0 0.5em 0
+    color: $gray
+    border-bottom: solid 1px $borderColor
+    font-weight: normal !important
+    display: block
+    width: 100%
+  #login_information
+    margin-top: 20px
+
+#edit_profile_form
+  textarea
+    width: 97%
+    height: 100px
+
+#edit_links_table
+  width: 100%
+  input
+    width: 95%
+  td
+    text-align: center
+
+#content h1
+  margin-bottom: 0
+
+#content h2
+  font-size: 14px
+  margin: 1em 0 0.5em 0
+  color: $gray
 
 .stats
   text-align: left
@@ -26,14 +80,22 @@
   list-style-type: none
   margin: 0
   padding: 0
+  li
+    float: left
+    margin-right: 10px
+    text-align: center
 
-.social
-  display: inline-block
-  width: 30px
-  height: 30px
-  margin-right: 20px
-  background-image: url(/images/social-icons.png)
-  +accessible_text_replacement
+    .social
+      width: 30px
+      height: 30px
+      background-image: url(/images/social-icons.png)
+      +accessible_text_replacement
+      display: block
+
+.message
+  background-position: -34px 0
+  &:hover
+    background-position: -34px -32px
 
 .facebook
   background-position: 0 0
@@ -64,3 +126,9 @@
   background-position: -193px 0
   &:hover
     background-position: -193px -32px
+
+.message
+  background-position: -228px 0
+  &:hover
+    background-position: -228px -32px
+
