--- a/app/views/shared/_identity.html.erb
+++ b/app/views/shared/_identity.html.erb
@@ -8,9 +8,9 @@
     <% end %>
   <% else %>
     <% if @real_current_user && @real_current_user != @current_user %>
-      <li class="user_name"><%= link_to t('masquerading.as', "As: *%{user_name}*", :user_name => @current_user.short_name, :wrapper => '<span class="emphasize-name">\1</span>'), settings_profile_path %></li>
+      <li class="user_name"><%= link_to t('masquerading.as', "As: *%{user_name}*", :user_name => @current_user.short_name, :wrapper => '<span class="emphasize-name">\1</span>'), user_profile_path(@current_user) %></li>
     <% else %>
-      <li class="user_name"><%= link_to @current_user.short_name, settings_profile_path %></li>
+      <li class="user_name"><%= link_to @current_user.short_name, user_profile_path(@current_user) %></li>
     <% end %>
     <% unless @current_user.fake_student? %>
       <li class="first inbox"><a href="<%= conversations_path %>"><span><%= t 'links.inbox', "Inbox" %></span>
@@ -18,7 +18,7 @@
         <b class="unread-messages-count"><%= unread %></b>
       <% end %>
       </a></li>
-    <li><%= link_to t('links.profile', "Profile"), settings_profile_path %></li>
+    <li><%= link_to t('links.settings', "Settings"), settings_profile_path %></li>
     <% end %>
     <li class="user_id" style="display: none;"><%= @current_user.id %></li>
     <li class="course_id" style="display: none;"><%= @context.id if @context && @context.is_a?(Course) %></li>
