use correct background, fix IE login style. fixes #9583
fix login box in IE (now a dark gradient). ensure page background is
textured (light gray, not white)

test plan:
1. go to the login page in any browser
2. the page background should be a light gray texture
3. go to the login page in IE
4. the login box should have a dark gray gradient

Change-Id: I957e2ccbd717976207404107e655d4ef7a430644
Reviewed-on: https://gerrit.instructure.com/12489
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/stylesheets/login.sass
+++ b/app/stylesheets/login.sass
@@ -70,6 +70,7 @@ body.modal
         border-bottom: 1px solid #fff
         height: 0
     &.login-box
+      @include vertical-gradient(#59656e, #3e464c)
       @include background(image-url("/images/Money_Noise_tm.png"), radial-gradient(50% -100px, circle cover, rgba(255, 255, 255, 0.6) 0%, transparent 100%), linear-gradient(top, #59656e, #3e464c))
       height: 331px
       width: $modal_box_width
