--- a/app/stylesheets/gradebook2.sass
+++ b/app/stylesheets/gradebook2.sass
@@ -350,7 +350,7 @@ $gradebook_checkbox_width: 16px
     background-image: url('/images/file.png')
   .pending_review &
     background-image: url('/images/pending_review.png')
-  .media_comment &
+  .media_comment &, .media_recording &
     background-image: url('/images/media_comment.gif')
   .quiz &
     background-image: url('/images/quiz.png')
