change wording on external tool page
fixes #9642

test plan:
  1. go to the default account
  2. click sub accounts on left side nav
  3. add a new sub account under the default
  4. go into the sub account
  5. click settings on the left side nav
  6. click "External Tools" tab
  7. notice new wording on page

Change-Id: Iea1fa43340c910dcbfede4eab7e1ba8c42ff553c
Reviewed-on: https://gerrit.instructure.com/12517
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Bracken Mosbacker <bracken@instructure.com>

--- a/app/views/external_tools/_external_tools.html.erb
+++ b/app/views/external_tools/_external_tools.html.erb
@@ -1,5 +1,13 @@
 <div id="external_tools">
-  <p><%= t :external_tools_note, "External tools are tools outside of Canvas that support Basic LTI integrations.  You will need to check with the author of the tool for the correct configuration parameters to add. Tools are configured at the account level, and can then be added as content in course modules for courses in the account." %>
+  <p><%= mt :external_tools_note, <<-HEREDOC, :lti_index_url => "https://lti-examples.heroku.com/index.html", :lti_examples_url => "http://help.instructure.com/entries/20878626-lti-tools-and-examples"
+  External (LTI) Tools are an easy way to add new features to Canvas.
+  They can be added to individual courses, or to all courses in an account.
+  Once configured, you can link to them through course modules and create assignments for
+  assessment tools.
+
+  Click [here](%{lti_index_url}) to see some LTI tools that work great with Canvas. You can also check out the Canvas Community topics about LTI tools [here](%{lti_examples_url}).
+  HEREDOC
+        %>
   </p>
   <% @context.context_external_tools.active.each do |tool| %>
     <%= render :partial => 'external_tools/external_tool', :object => tool %>
