show turnitin info in gradebook2, fixes #7450
show appropriate icon in each cell (if any), fix gradebook1 state logic
(show worst state, not average), show turnitin icon/link for text entry
submissions in the submission dialog

1. set up turnitin on the account
2. create an assignment that accepts text entries and uploads
3. enable turnitin on the assignment
4. as a student, upload a file submission (e.g. .doc or something turnitin
   likes)
5. as a different student, submit it via text entry
6. as a teacher, confirm that the turnitin icons now show up in gradebook2
7. click on each submission in gradebook2 to open the comment dialog
8. confirm that the turnitin icon is present, shows the score, and links
   to the originality report
9. go to gradebook1
10. confirm that the turnitin icons still display correctly

Change-Id: If6db3bd5b627b7dd4d306b89f9d0f71acf41b22e
Reviewed-on: https://gerrit.instructure.com/12522
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/gradebook2.sass
+++ b/app/stylesheets/gradebook2.sass
@@ -216,6 +216,25 @@ $cell_height: 33px
   &.resubmitted
     background-image: url("/images/gradebook-resubmitted-indicator.png")
 
+.gradebook-cell-turnitin
+  position: absolute
+  top: 2px
+  right: 2px
+  z-index: 1
+  width: 20px
+  height: 16px
+  &.no-score
+    background-image: url(/images/turnitin_no_score.png)
+  &.none-score
+    background-image: url(/images/turnitin_none_score.png)
+  &.acceptable-score
+    background-image: url(/images/turnitin_acceptable_score.png)
+  &.warning-score
+    background-image: url(/images/turnitin_warning_score.png)
+  &.problem-score
+    background-image: url(/images/turnitin_problem_score.png)
+  &.failure-score
+    background-image: url(/images/turnitin_failure_score.png)
 
 .gradebook-cell-comment
   position: absolute
@@ -225,7 +244,7 @@ $cell_height: 33px
   height: 12px
   width: 12px
   visibility: hidden
-  z-index: 1 //needs to be above "normal but below tooltips"
+  z-index: 2 //needs to be above "normal but below tooltips"
   overflow: hidden
 
   &:hover,
